--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.7.0",
     "styled-components": "^6.1.19",
     "tailwind-clip-path": "^1.0.0",
     "tailwind-merge": "^3.3.1",
