--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "recharts": "^3.1.0",
     "routes": "^2.1.0",
     "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
