--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^12.23.6",
     "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
+    "install": "^0.13.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
