--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
     "emoji-picker-react": "^4.13.2",
     "framer-motion": "^12.23.6",
     "html-to-image": "^1.11.13",
@@ -38,6 +40,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.7.1",
+    "react-secure-storage": "^1.3.2",
     "recharts": "^3.1.0",
     "routes": "^2.1.0",
     "styled-components": "^6.1.19",
